# Shiny-Barnacle

./: .gitignore  Build  CMakeCache.txt  CMakeLists.txt  CMakeLists_Linux.txt  CMakeLists_Windows.txt  Makefile  buildHelp.md  cmake.ps1  cmake_install.cmake  readme.md
.vscode_SAMPLE/: c_cpp_properties.json  tasks.json
libMac/: libGLEW.2.1.0.dylib
shaders/: vertex.vsh
src/: GameObjects.hpp  Graphics.hpp  Input.hpp  VectorUtil.cpp  VectorUtil.hpp  main.cpp
src/GameObjects/: Cube.cpp  Cube.hpp  Object.cpp  Object.hpp
src/Graphics/: Camera.cpp  Camera.hpp  CubeMesh.cpp  CubeMesh.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  ShaderClass.cpp  ShaderClass.hpp
src/Graphics/Shaders/: fragment.fsh  vertex.vsh
src/Input/: Keyboard.cpp  Keyboard.hpp
